Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10269

Fixes for selective trybits

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.11.0
    • None
    • None
    • 3
    • 9223372036854775807

      While checking the waiting queue for inodebits lock it is needed to take into account also try_bits of new lock and locks in that queue.

      Another topic to solve in this ticket is the correct using of try_bits from callers and avoiding useless or trouble making cases with extra inodebits.

            tappro Mikhail Pershin
            tappro Mikhail Pershin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: