lustre/tests/sanityn.sh
@@ -2519,8 +2519,8 @@ test_51d() {
 	local br=$(grep -A 10 $tfile /proc/$PID/smaps | awk '/^Rss/{print $2}')
 	echo "Before revoking layout lock: $br KB mapped"
 
-	# delete the file will revoke layout lock
-	rm -f $DIR2/$tfile
+	# cancel layout lock manually
+	cancel_lru_locks mdc
 
 	# rss after revoking
 	local ar=$(grep -A 10 $tfile /proc/$PID/smaps | awk '/^Rss/{print $2}')
